# beegen

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
beegen/: __init__.py  __main__.py  __version__.py  application.py
beegen/commands/: about.py  base.py  configure.py
beegen/commands/mock/: __init__.py  create.py  run.py  schema.json
beegen/commands/smart/: __init__.py  anonymize_data.py  base.py  pull_request_desc.py  readme.py  regex.py  translate.py  vector_store.py
beegen/commands/smart/core/: chain.py  provider.py  vector_store.py
beegen/commands/snippets/: __init__.py  add.py  base.py  list.py  remove.py  use.py
beegen/commands/utils/: __init__.py  chat.py
beegen/config/: settings.py
beegen/services/: mock.py
beegen/services/chat/: app.py
beegen/services/chat/components/: page_config.py
beegen/services/chat/pages/: playground.py  settings.py
