[tool.poetry]
name = "beegen"
version = "0.1.3"
description = "BeeGen is an intelligent command-line tool designed to assist developers with everyday tasks, leveraging the power of generative AI."
authors = ["Adilson Pavan <adilson.pavan@gmail.com>"]
repository = "https://github.com/pavanad/beegen"
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
beegen = "beegen.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^2.1.0"
pyfiglet = "^1.0.2"
tqdm = "^4.66.4"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
jsonschema = "^4.22.0"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain-google-genai = "^1.0.5"
langchain-openai = "^0.1.8"
rich = "^13.7.1"
streamlit = "^1.35.0"
streamlit-ace = "^0.1.1"
pypdf = "^4.2.0"
faiss-cpu = "^1.8.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
bandit = "^1.7.8"
twine = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
